<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">AraICT</string>
    <!--Screen How To Use-->
    <string name="app_introduction" translatable="false">AraICT introduction</string>
    <string name="app_introduction_1" translatable="false">You can look up Hanja(Chinese characters in Korea) endlessly.</string>
    <string name="app_introduction_2" translatable="false">You can see Hanja as a decomposed form.</string>
    <string name="app_introduction_3" translatable="false">You can look up difficult Hanja during web surfing.</string>
    <string name="app_introduction_4" translatable="false">There is a today\'s expression.</string>
    <string name="app_introduction_5" translatable="false">AraICT has various type of workbooks.</string>

    <string name="edit_term_label_eng_abbr" translatable="false">eng abbr</string>
    <string name="edit_term_edittext_eng_abbr" translatable="false">eng abbr</string>
    <string name="edit_term_label_eng_full" translatable="false">eng full</string>
    <string name="edit_term_edittext_eng_full" translatable="false">eng full</string>
    <string name="edit_term_label_ko_title" translatable="false">ko title</string>
    <string name="edit_term_edittext_ko_title" translatable="false">ko title</string>
    <string name="edit_term_label_hanja_title" translatable="false">hanja_short</string>
    <string name="edit_term_edittext_hanja_title" translatable="false">hanja_short</string>
    <string name="edit_term_label_ko_short" translatable="false">ko_short</string>
    <string name="edit_term_edittext_ko_short" translatable="false">ko_short</string>
    <string name="edit_term_label_ko_full" translatable="false">ko_full</string>
    <string name="edit_term_edittext_ko_full" translatable="false">ko_full</string>

    <string name="edit_term_label_group_ict" translatable="false">ICT Term</string>
    <string name="edit_term_label_group_hw" translatable="false">HW Term</string>
    <string name="edit_term_label_group_gis" translatable="false">GIS Term</string>
    <string name="edit_term_label_group_etc" translatable="false">ETC Term</string>

    <string name="edit_term_label_url" translatable="false">Url </string>
    <string name="edit_term_edittext_url" translatable="false">Url</string>

    <string name="edit_term_label_group_nation" translatable="false">Nation </string>
    <string name="edit_term_edittext_group_nation" translatable="false">Nation ISO name</string>


    <string name="dialog_menu_show_ict_term" translatable="false">Show ICT terms</string>
    <string name="dialog_menu_show_etc_term" translatable="false">Show minor terms</string>
    <string name="add_new_term" translatable="false">Add a new term</string>

    <string name="choice_copy_term_eng_abbr" translatable="false">English Abbr</string>
    <string name="choice_copy_term_eng_full" translatable="false">English Full</string>
    <string name="choice_copy_term_ko_title" translatable="false">Korean Title</string>
    <string name="choice_copy_term_hanja_title" translatable="false">Hanja Title</string>
    <string name="choice_copy_term_ko_short" translatable="false">Korean Short</string>
    <string name="choice_copy_term_ko_full" translatable="false">Korean Full</string>
    <string name="choice_copy_term_all" translatable="false">All</string>

    <string name="title_add_term" translatable="false">Add Term</string>
    <string name="title_edit_term" translatable="false">Edit Term</string>
    <string name="dialogs_refresh_ict_term_list_after_time" translatable="false">Refresh List from Server</string>



</resources>
